# narwhal

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: bump-version.mjs  screenshot.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  composes.rs  hosts.rs  known_hosts.rs  lib.rs  main.rs  ssh.rs  ssh_config.rs  store.rs  tray.rs
src-tauri/src/docker/: compose.rs  host.rs  mod.rs  remote.rs  tunnel.rs
src/components/: CommandPalette.tsx  ComposeDialog.tsx  ConnectDialog.tsx  ContainerList.tsx  ContainerRow.tsx  DetailPanel.tsx  Header.tsx  HostForm.tsx  LogsView.tsx  PortChips.tsx  ResourceList.tsx  SettingsDialog.tsx  Sidebar.tsx  StatusBar.tsx  TerminalDrawer.tsx  TitleBar.tsx  UpdateBanner.tsx
src/lib/: docker.ts  ipc.ts  services.tsx
src/stores/: containers.ts  settings.ts  updater.ts
web/: index.html
