[package]
name = "narwhal"
version = "0.1.1"
description = "Gestor de Docker de escritorio, local y remoto"
authors = ["chefibecerra"]
edition = "2021"

[lib]
name = "narwhal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Binario mínimo en release: LTO completo + una unidad de codegen permiten
# optimizar entre crates; "s" prioriza tamaño; strip quita símbolos de debug;
# panic=abort ahorra el código de unwinding. Solo encarece el build de CI.
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "process"] }
bollard = "0.17"
async-trait = "0.1"
futures-util = "0.3"
# sin flate2 (compresión SSH que no negociamos); aws-lc-rs y rsa se quedan:
# el backend de cifrado es obligatorio y media internet aún usa claves RSA
russh = { version = "0.62", default-features = false, features = ["aws-lc-rs", "rsa"] }
uuid = { version = "1", features = ["v4"] }
